[package]
edition = "2021"
name = "rrule-rust"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]
path = "lib/lib.rs"

[dependencies]
chrono = "0.4.42"
chrono-tz = "0.10.4"
indexmap = "2.12.1"
itertools = "0.14.0"
napi = "3.5.2"
napi-derive = "3.3.3"
replace_with = "0.1.8"
rrule = { version = "0.14.0", features = ["exrule"] }

[build-dependencies]
napi-build = "2.3.1"

[profile.release]
lto = true
strip = "symbols"
